changed fetch config

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,1 +1,1 @@
-/home/xero/.config/waybar/style/[Dark] Latte-Wallust combined v2.css
+/home/xero/.config/waybar/style/[Dark] Wallust Obsidian Edge.css
