--- a/.config/waybar/wallust/colors-waybar.css
+++ b/.config/waybar/wallust/colors-waybar.css
@@ -1,24 +1,24 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
- @define-color foreground #D7D6D2;
- @define-color background #000003;
- @define-color background-alt rgba(0,0,3,0.25);
- @define-color cursor #878B8C;
+ @define-color foreground #D7D7D7;
+ @define-color background #2F2F2F;
+ @define-color background-alt rgba(47,47,47,0.25);
+ @define-color cursor #939393;
  
- @define-color color0 #000003;
- @define-color color1 #252D33;
- @define-color color2 #293035;
- @define-color color3 #2C353A;
- @define-color color4 #2D363A;
- @define-color color5 #545551;
- @define-color color6 #6A685F;
- @define-color color7 #BEBCB6;
- @define-color color8 #85847F;
- @define-color color9 #323C44;
- @define-color color10 #374047;
- @define-color color11 #3B474D;
- @define-color color12 #3C484E;
- @define-color color13 #70716C;
- @define-color color14 #8D8A7E;
- @define-color color15 #BEBCB6; 
+ @define-color color0 #535353;
+ @define-color color1 #232323;
+ @define-color color2 #3B3B3B;
+ @define-color color3 #3E3E3E;
+ @define-color color4 #636363;
+ @define-color color5 #696969;
+ @define-color color6 #696969;
+ @define-color color7 #BDBDBD;
+ @define-color color8 #848484;
+ @define-color color9 #2F2F2F;
+ @define-color color10 #4F4F4F;
+ @define-color color11 #535353;
+ @define-color color12 #848484;
+ @define-color color13 #8C8C8C;
+ @define-color color14 #8C8C8C;
+ @define-color color15 #BDBDBD; 
